# testtest-db

./: .gitignore  pyproject.toml  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: feature_metadata.json  feature_selection_config.json  feature_selection_config.yaml  training_config.yaml
docs/: API_STATUS_AND_ISSUANCE.md  BOTTLENECK_ANALYSIS.md  DATA_COLLECTION_README.md  FEATURE_SELECTION_TUNING.md  IMPROVEMENT_POINTS.md  PIPELINE_ANALYSIS_AND_IMPROVEMENTS.md  RUN_COMMANDS.md
reports/: categorical_analysis_report.md  feature_selection_pipeline_report.json  feature_selection_pipeline_report.md  feature_selection_report.md  training_pipeline_report.md
scripts/: auction.py  combine_raw_data.py  domae.py  run_categorical_merge_experiments.py  run_collect_all.py  run_feature_selection.py  run_feature_selection_pipeline.py  run_inference_and_plot.py  run_training_pipeline.py  somae.py  test_apis.py  weather.py
scripts/collectors/: __init__.py  auction_collector.py  base.py  domae_collector.py  somae_collector.py  weather_collector.py
scripts/feature_selection/: __init__.py  column_profiler.py  config_loader.py  data_merger.py  device_utils.py  feature_selector.py  stage1_prefilter.py  stage2_elasticnet.py  stage3_rolling_permutation.py  stage4_stability.py  stage5_common.py
scripts/training/: __init__.py  cv.py  cv_splits.py  deep_models.py  feature_cluster.py  metrics.py  split.py
temp/: merged_for_feature_selection.csv
(+1 files in other folders)
